syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "./proto";

package runner;

service Runner {
  rpc RunTest (RunTestRequest) returns (RunTestResponse) {}
}

message RunTestRequest {
  uint32 data_id = 1;
  google.protobuf.Timestamp time = 2;
  string test = 3;
}

message RunTestResponse {
  uint32 flag_id = 2;
  uint32 flag = 3;
}
